WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217073
[macCatalyst] Focus rings are not painted
https://bugs.webkit.org/show_bug.cgi?id=217073
Summary
[macCatalyst] Focus rings are not painted
Aditya Keerthi
Reported
2020-09-28 18:29:07 PDT
...
Attachments
Patch
(7.96 KB, patch)
2020-09-28 18:41 PDT
,
Aditya Keerthi
no flags
Details
Formatted Diff
Diff
Patch
(9.88 KB, patch)
2020-09-28 19:26 PDT
,
Aditya Keerthi
no flags
Details
Formatted Diff
Diff
Patch
(9.44 KB, patch)
2020-09-29 07:50 PDT
,
Aditya Keerthi
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2020-09-28 18:29:28 PDT
<
rdar://problem/46794111
>
Aditya Keerthi
Comment 2
2020-09-28 18:41:24 PDT
Created
attachment 409943
[details]
Patch
Tim Horton
Comment 3
2020-09-28 18:45:57 PDT
Should see what Wenson thinks about watchOS.
Tim Horton
Comment 4
2020-09-28 18:46:36 PDT
Might need to give this its own enable that is on for MAC, IOS, and MACCATALYST, but not the others.
Aditya Keerthi
Comment 5
2020-09-28 19:26:19 PDT
Created
attachment 409951
[details]
Patch
Wenson Hsieh
Comment 6
2020-09-28 19:37:51 PDT
(In reply to Tim Horton from
comment #3
)
> Should see what Wenson thinks about watchOS.
I think it should be fine to match iPhone behavior for watchOS and tvOS.
Tim Horton
Comment 7
2020-09-28 21:04:00 PDT
(In reply to Wenson Hsieh from
comment #6
)
> (In reply to Tim Horton from
comment #3
) > > Should see what Wenson thinks about watchOS. > > I think it should be fine to match iPhone behavior for watchOS and tvOS.
Except that apparently the UIKit API is missing!
Wenson Hsieh
Comment 8
2020-09-28 22:46:33 PDT
(In reply to Tim Horton from
comment #7
)
> (In reply to Wenson Hsieh from
comment #6
) > > (In reply to Tim Horton from
comment #3
) > > > Should see what Wenson thinks about watchOS. > > > > I think it should be fine to match iPhone behavior for watchOS and tvOS. > > Except that apparently the UIKit API is missing!
Ah, I see. I take that back, then!
Aditya Keerthi
Comment 9
2020-09-29 07:50:57 PDT
Created
attachment 409998
[details]
Patch
Aditya Keerthi
Comment 10
2020-09-29 07:52:14 PDT
(In reply to Tim Horton from
comment #7
)
> (In reply to Wenson Hsieh from
comment #6
) > > (In reply to Tim Horton from
comment #3
) > > > Should see what Wenson thinks about watchOS. > > > > I think it should be fine to match iPhone behavior for watchOS and tvOS. > > Except that apparently the UIKit API is missing!
I think the API is available, just forgot to remove the flags from UIKitSPI.h.
Tim Horton
Comment 11
2020-09-29 13:49:11 PDT
(In reply to Aditya Keerthi from
comment #10
)
> (In reply to Tim Horton from
comment #7
) > > (In reply to Wenson Hsieh from
comment #6
) > > > (In reply to Tim Horton from
comment #3
) > > > > Should see what Wenson thinks about watchOS. > > > > > > I think it should be fine to match iPhone behavior for watchOS and tvOS. > > > > Except that apparently the UIKit API is missing! > > I think the API is available, just forgot to remove the flags from > UIKitSPI.h.
Ah!
EWS
Comment 12
2020-09-29 14:22:35 PDT
Committed
r267760
: <
https://trac.webkit.org/changeset/267760
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 409998
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug