[macCatalyst] Focus rings are not painted https://bugs.webkit.org/show_bug.cgi?id=217073 <rdar://problem/46794111>

Reviewed by Darin Adler.

Source/WebCore:

The logic which paints focus rings on Cocoa platforms is incorrectly
guarded by the ENABLE(FULL_KEYBOARD_ACCESS) flag. This flag is only
enabled on macOS and iOS, resulting in an empty implementation for
GraphicsContext::drawFocusRing on macCatalyst.

To fix, remove the incorrect usage of ENABLE(FULL_KEYBOARD_ACCESS).

* platform/graphics/cocoa/GraphicsContextCocoa.mm:
(WebCore::GraphicsContext::drawFocusRing):
* rendering/RenderImage.cpp:
(WebCore::RenderImage::paintAreaElementFocusRing):
* rendering/RenderThemeIOS.h:
* rendering/RenderThemeIOS.mm:
(WebCore::RenderThemeIOS::platformFocusRingColor const):

Source/WebCore/PAL:

* pal/spi/ios/UIKitSPI.h:

Ensure needed interfaces are available on all IOS_FAMILY platforms.

Source/WebKit:

* UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::platformInitializeWebProcess):

Ensure that a default focus ring color is specified on macCatalyst.


Canonical link: https://commits.webkit.org/229882@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267760 268f45cc-cd09-0410-ab3c-d52691b4dbfc