Source/WebCore/PAL/pal/spi/ios/UIKitSPI.h
@@ -143,21 +143,17 @@ typedef enum {
 @property (nonatomic, copy, setter=_setTitle:) NSString *_title;
 @end
 
-#if ENABLE(FULL_KEYBOARD_ACCESS)
 @interface UIFocusRingStyle : NSObject
 + (CGFloat)cornerRadius;
 + (CGFloat)maxAlpha;
 + (CGFloat)alphaThreshold;
 @end
-#endif
 
 #endif // USE(APPLE_INTERNAL_SDK)
 
-#if ENABLE(FULL_KEYBOARD_ACCESS)
 @interface UIColor (IPI)
 + (UIColor *)keyboardFocusIndicatorColor;
 @end
-#endif
 
 #if HAVE(OS_DARK_MODE_SUPPORT)
 @interface UIColor (UIColorInternal)
